--- a/demo/package.json
+++ b/demo/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "author": "Richard Bernards <richard.bernards@gmail.com>",
   "description": "A test or dummy lifx cli app",
-  "main": "./lifx.js",
+  "main": "./cli-lifx.js",
   "dependencies" : {
     "lifx-api" : "1.0.1"
   }
