Add IFTTT send request demo
And alter ignore files accordingly

--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,8 @@
-demoLifx/node_modules/*
-demoGCal/node_modules/*
+demoLifx/node_modules
+demoGCal/node_modules
 demoGCal/client_secret.json
-demoDarkSky/node_modules/*
+demoDarkSky/node_modules
+demoIFTTT/node_modules
 test
 node_modules
 .git
